--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -8,8 +8,8 @@ body .app {
   font-family: Arial, Helvetica, 'STHeiti STXihei', 'Microsoft YaHei', Tohoma, sans-serif;
   background-color: $background-color;
   font-size: 17px;
+  // touch-action: none;
 }
-
 .app-container {
   padding-bottom: 50px;
 }
